--- a/PM_Tool/mainPage/mp_mainpage.ui
+++ b/PM_Tool/mainPage/mp_mainpage.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1407</width>
-    <height>809</height>
+    <width>1400</width>
+    <height>820</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,9 +17,29 @@
    <property name="geometry">
     <rect>
      <x>0</x>
+     <y>170</y>
+     <width>487</width>
+     <height>471</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QStackedWidget" name="serSetWid">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>10</y>
+     <width>491</width>
+     <height>162</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QStackedWidget" name="mp_bulksendWid">
+   <property name="geometry">
+    <rect>
+     <x>491</x>
      <y>0</y>
-     <width>661</width>
-     <height>431</height>
+     <width>487</width>
+     <height>591</height>
     </rect>
    </property>
   </widget>
