--- a/PM_Tool/bus/bus_uiData/busuidata.ui
+++ b/PM_Tool/bus/bus_uiData/busuidata.ui
@@ -335,7 +335,7 @@
     <property name="geometry">
      <rect>
       <x>260</x>
-      <y>43</y>
+      <y>86</y>
       <width>120</width>
       <height>21</height>
      </rect>
@@ -433,7 +433,7 @@
     <property name="geometry">
      <rect>
       <x>386</x>
-      <y>80</y>
+      <y>34</y>
       <width>101</width>
       <height>31</height>
      </rect>
@@ -463,7 +463,7 @@
     <property name="geometry">
      <rect>
       <x>261</x>
-      <y>79</y>
+      <y>33</y>
       <width>120</width>
       <height>31</height>
      </rect>
@@ -493,12 +493,70 @@
      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
     </property>
    </widget>
+   <widget class="QSpinBox" name="sendNum">
+    <property name="geometry">
+     <rect>
+      <x>386</x>
+      <y>120</y>
+      <width>101</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>11</pointsize>
+     </font>
+    </property>
+    <property name="minimum">
+     <number>1</number>
+    </property>
+    <property name="maximum">
+     <number>15</number>
+    </property>
+    <property name="value">
+     <number>4</number>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_27">
+    <property name="geometry">
+     <rect>
+      <x>259</x>
+      <y>125</y>
+      <width>120</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>120</width>
+      <height>0</height>
+     </size>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>120</width>
+      <height>16777215</height>
+     </size>
+    </property>
+    <property name="font">
+     <font>
+      <family>微软雅黑</family>
+      <pointsize>11</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>发送数量：</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+    </property>
+   </widget>
   </widget>
   <widget class="QSpinBox" name="boxNum">
    <property name="geometry">
     <rect>
      <x>386</x>
-     <y>247</y>
+     <y>290</y>
      <width>101</width>
      <height>31</height>
     </rect>
@@ -515,7 +573,7 @@
     <number>15</number>
    </property>
    <property name="value">
-    <number>3</number>
+    <number>9</number>
    </property>
   </widget>
   <widget class="QGroupBox" name="groupBox_3">
