--- a/PM_Tool/mainPage/mp_mainpage.ui
+++ b/PM_Tool/mainPage/mp_mainpage.ui
@@ -16,31 +16,53 @@
   <widget class="QStackedWidget" name="ip_BulkSendWid">
    <property name="geometry">
     <rect>
-     <x>0</x>
-     <y>170</y>
+     <x>440</x>
+     <y>24</y>
      <width>487</width>
-     <height>471</height>
+     <height>791</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true"/>
    </property>
   </widget>
   <widget class="QStackedWidget" name="serSetWid">
    <property name="geometry">
     <rect>
      <x>0</x>
-     <y>10</y>
-     <width>491</width>
-     <height>162</height>
+     <y>24</y>
+     <width>441</width>
+     <height>251</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true"/>
    </property>
   </widget>
   <widget class="QStackedWidget" name="mp_bulksendWid">
    <property name="geometry">
     <rect>
-     <x>491</x>
-     <y>0</y>
-     <width>487</width>
-     <height>591</height>
+     <x>920</x>
+     <y>24</y>
+     <width>481</width>
+     <height>791</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true"/>
+   </property>
+  </widget>
+  <widget class="QStackedWidget" name="bus_bulksendWid">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>284</y>
+     <width>441</width>
+     <height>521</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true"/>
    </property>
   </widget>
  </widget>
