--- a/PM_Tool/bus/box_uiData/box_ui.ui
+++ b/PM_Tool/bus/box_uiData/box_ui.ui
@@ -202,7 +202,7 @@
        <number>0</number>
       </property>
       <property name="maximum">
-       <double>100.000000000000000</double>
+       <double>10000000000.000000000000000</double>
       </property>
      </widget>
      <widget class="QLabel" name="label_128">
@@ -636,7 +636,7 @@
        <number>0</number>
       </property>
       <property name="maximum">
-       <double>100.000000000000000</double>
+       <double>10000000000.000000000000000</double>
       </property>
      </widget>
      <widget class="QLabel" name="vol_unbal_6">
