--- a/PM_Tool/mainPage/seripport.ui
+++ b/PM_Tool/mainPage/seripport.ui
@@ -53,7 +53,7 @@
      <rect>
       <x>15</x>
       <y>60</y>
-      <width>74</width>
+      <width>101</width>
       <height>31</height>
      </rect>
     </property>
@@ -99,7 +99,7 @@
      <rect>
       <x>15</x>
       <y>121</y>
-      <width>75</width>
+      <width>101</width>
       <height>31</height>
      </rect>
     </property>
@@ -115,7 +115,7 @@
      </font>
     </property>
     <property name="text">
-     <string>端口号：</string>
+     <string>PDU端口号：</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -132,6 +132,52 @@
     </property>
     <property name="text">
      <string>全部发送</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="Port_5">
+    <property name="geometry">
+     <rect>
+      <x>15</x>
+      <y>171</y>
+      <width>101</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>0</width>
+      <height>31</height>
+     </size>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>11</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>母线端口号：</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="BusPort">
+    <property name="geometry">
+     <rect>
+      <x>135</x>
+      <y>170</y>
+      <width>142</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>微软雅黑</family>
+      <pointsize>11</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>6000</string>
     </property>
    </widget>
   </widget>
